# donna_appraiser_ai

./: .gitignore  README.md  X_train.csv  donna_appraiser_ai.py  game_agent_simple.py  game_agent_test.py  hello.py  metrics_summary.json  pyproject.toml
game_python/: .gitignore  CONTRIBUTION_GUIDE.md  pyproject.toml
game_python/.github/: PULL_REQUEST_TEMPLATE.md  pr-labeler-config.yml
game_python/.github/PULL_REQUEST_TEMPLATE/: default.md  plugin.md
game_python/.github/workflows/: pr-labeler.yml  validate-new-plugin-metadata.yml
game_python/examples/game/: chat_agent.py  test_agent.py
game_python/examples/hosted_agent/: example-twitter.py
game_python/plugins/: plugin_metadata_template.yml
game_python/plugins/RAGPinecone/: README.md  plugin_metadata.yml  pyproject.toml  setup.py
game_python/plugins/RAGPinecone/examples/: populate_knowledge_base.py  test_advanced_search.py  test_rag_pinecone_telegram.py
game_python/plugins/RAGPinecone/rag_pinecone_gamesdk/: __init__.py  populate_rag.py  rag_pinecone_game_functions.py  rag_pinecone_plugin.py  search_rag.py
game_python/plugins/cdp/: README.md
game_python/plugins/onchain_actions/: README.md
game_python/plugins/telegram/: README.md  plugin_metadata.yml  pyproject.toml
game_python/plugins/telegram/examples/: test_telegram.py  test_telegram_game_functions.py
game_python/plugins/telegram/telegram_plugin_gamesdk/: telegram_plugin.py
game_python/plugins/twitter/: README.md  pyproject.toml
game_python/plugins/twitter/examples/: test_game_twitter.py  test_twitter.py
game_python/plugins/twitter/twitter_plugin_gamesdk/: game_twitter_auth.py  game_twitter_plugin.py  twitter_plugin.py
game_sdk/game/: agent.py  worker.py
game_sdk/hosted_game/: README.md  agent.py  sdk.py
src/donna_ai/: donna_agent_workers.py  donna_agent_workers_new.py  donna_appraiser_ai.py  donna_chat_agent.py
src/smart_contracts/: ReportRegistry.sol
src/train_ml/: predict_price.py  train_models.py
src/train_ml/models/: features.json  lasso_model.pkl  linearregression_model.pkl  randomforest_model.pkl  ridge_model.pkl  xgboost_model.pkl
