[project]
name = "donna-appraiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "matplotlib>=3.10.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.1",
    "xgboost>=3.0.0",
]
