[project]
name = "donna-appraiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "openai>=1.73.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.1",
    "uvicorn>=0.34.1",
    "xgboost>=3.0.0",
]
